syntax = "proto3";

package pb; 

option go_package = ".;pb";

message EmployeeResponse {
    int32 id=1;
    string name = 2;
    float height = 3;
    float weight = 4;
    bytes avatar = 5;
    string email = 6;
    bool email_verified = 7;
    repeated string phone_numbers = 8;
    Gender gender = 11;
    repeated Address addresses = 13;

    reserved 9,10,20 to 100,200 to max;
    reserved "foo","bar";

    message Address {
        string province = 1;
        string city = 2;
        string zip_code = 3;
        string street = 4;
        string number = 5;
    }
}

enum Gender {
    option allow_alias = true;
    NOT_SPECIFIED = 0;
    FAMAL = 1;
    MALE = 2;

    WOMAN = 1;
    MAN = 2;
}

message EmployeeRequest {
    int32 id=1;
}

service EmployeeService {
    rpc GetEmployee (EmployeeRequest) returns (EmployeeResponse);
}